[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "vlcapi"
authors = [
    { name = "Pierre LeMoine", email = "pypi@luben.se"},
]
description = "A python-api for controlling VLC as a 'VLC-lua-interface'"
readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.7"
keywords = ["vlc"]
classifiers = [
    "Development Status :: 3 - alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]

[tool.setuptools_scm]
local_scheme = 'no-local-version'
version_scheme = 'no-guess-dev'

[tool.ruff]
line-length = 120
[tool.ruff.lint]
[tool.ruff.format]
